chore(docs): Generated JS Client Reference (automated)

--- a/www/apps/docs/content/references/js-client/addresses/classes/addresses.AddressesResource.mdx
+++ b/www/apps/docs/content/references/js-client/addresses/classes/addresses.AddressesResource.mdx
@@ -52,7 +52,7 @@ Adds an address to a customers saved addresses
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ Deletes an address of a customer
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -166,7 +166,7 @@ Update an address of a customer
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
