--- a/www/apps/docs/content/references/js-client/admin_auth/classes/admin_auth.AdminAuthResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_auth/classes/admin_auth.AdminAuthResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminAuthRes type: object required: - user properties: user: description: User details. $ref: \"#/components/schemas/User\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -135,7 +135,7 @@ ___
       {
         "name": "AdminAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminAuthRes type: object required: - user properties: user: description: User details. $ref: \"#/components/schemas/User\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -191,7 +191,7 @@ ___
       {
         "name": "AdminBearerAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminBearerAuthRes type: object properties: accessToken: description: Access token for subsequent authorization. type: string",
         "optional": false,
         "defaultValue": "",
         "children": []
