--- a/www/apps/docs/content/references/js-client/admin_batch_jobs/classes/admin_batch_jobs.AdminBatchJobsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_batch_jobs/classes/admin_batch_jobs.AdminBatchJobsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminBatchJobRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminBatchJobRes type: object required: - batch_job properties: batch_job: description: Batch job details. $ref: \"#/components/schemas/BatchJob\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -101,7 +101,7 @@ ___
       {
         "name": "AdminBatchJobRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminBatchJobRes type: object required: - batch_job properties: batch_job: description: Batch job details. $ref: \"#/components/schemas/BatchJob\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -152,7 +152,7 @@ ___
       {
         "name": "AdminBatchJobRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminBatchJobRes type: object required: - batch_job properties: batch_job: description: Batch job details. $ref: \"#/components/schemas/BatchJob\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -203,7 +203,7 @@ ___
       {
         "name": "AdminBatchJobListRes",
         "type": "[`PaginatedResponse`](../modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `batch_jobs`: [`BatchJob`](../../internal/classes/admin_batch_jobs.internal.BatchJob.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminBatchJobListRes type: object required: - batch_jobs - count - offset - limit properties: batch_jobs: type: array description: An array of batch job details. items: $ref: \"#/components/schemas/BatchJob\" count: type: integer description: The total number of items available offset: type: integer description: The number of batch jobs skipped when retrieving the batch jobs. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -254,7 +254,7 @@ ___
       {
         "name": "AdminBatchJobRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminBatchJobRes type: object required: - batch_job properties: batch_job: description: Batch job details. $ref: \"#/components/schemas/BatchJob\"",
         "optional": false,
         "defaultValue": "",
         "children": []
