--- a/www/apps/docs/content/references/js-client/admin_collections/classes/admin_collections.AdminCollectionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_collections/classes/admin_collections.AdminCollectionsResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminCollectionsRes type: object x-expanded-relations: field: collection relations: - products required: - collection properties: collection: type: \"Product Collection details.\" $ref: \"#/components/schemas/ProductCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -113,7 +113,7 @@ ___
       {
         "name": "AdminCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminCollectionsRes type: object x-expanded-relations: field: collection relations: - products required: - collection properties: collection: type: \"Product Collection details.\" $ref: \"#/components/schemas/ProductCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -223,7 +223,7 @@ ___
       {
         "name": "AdminCollectionsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `collections`: [`ProductCollection`](../../internal/classes/admin_collections.internal.ProductCollection.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminCollectionsListRes type: object required: - collections - count - offset - limit properties: collections: type: array description: an array of collection details items: $ref: \"#/components/schemas/ProductCollection\" count: type: integer description: The total number of items available offset: type: integer description: The number of product collections skipped when retrieving the product collections. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -286,7 +286,7 @@ ___
       {
         "name": "AdminDeleteProductsFromCollectionRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The ID of the collection",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -341,7 +341,7 @@ ___
       {
         "name": "AdminCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminCollectionsRes type: object x-expanded-relations: field: collection relations: - products required: - collection properties: collection: type: \"Product Collection details.\" $ref: \"#/components/schemas/ProductCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -404,7 +404,7 @@ ___
       {
         "name": "AdminCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminCollectionsRes type: object x-expanded-relations: field: collection relations: - products required: - collection properties: collection: type: \"Product Collection details.\" $ref: \"#/components/schemas/ProductCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
