--- a/www/apps/docs/content/references/js-client/admin_customers/classes/admin_customers.AdminCustomersResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_customers/classes/admin_customers.AdminCustomersResource.mdx
@@ -52,7 +52,7 @@ Creates a customer
       {
         "name": "AdminCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ Lists customers
       {
         "name": "AdminCustomersListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `customers`: [`Customer`](../../internal/classes/admin_collections.internal.Customer.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -158,7 +158,7 @@ Retrieves a customer
       {
         "name": "AdminCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -219,7 +219,7 @@ Updates a customer
       {
         "name": "AdminCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
