--- a/www/apps/docs/content/references/js-client/admin_discounts/classes/admin_discounts.AdminDiscountsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_discounts/classes/admin_discounts.AdminDiscountsResource.mdx
@@ -74,7 +74,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -137,7 +137,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -192,7 +192,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -263,7 +263,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -326,7 +326,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -515,7 +515,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -578,7 +578,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -649,7 +649,7 @@ ___
       {
         "name": "AdminDiscountConditionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount condition details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -704,7 +704,7 @@ ___
       {
         "name": "AdminDiscountsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `discounts`: [`Discount`](../../internal/classes/admin_collections.internal.Discount.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminDiscountsListRes type: object x-expanded-relations: field: discounts relations: - parent_discount - regions - rule - rule.conditions required: - discounts - count - offset - limit properties: discounts: type: array items: $ref: \"#/components/schemas/Discount\" count: type: integer description: The total number of items available offset: type: integer description: The number of discounts skipped when retrieving the discounts. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -767,7 +767,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -822,7 +822,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -877,7 +877,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -940,7 +940,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1019,7 +1019,7 @@ ___
       {
         "name": "AdminDiscountsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Discount details.",
         "optional": false,
         "defaultValue": "",
         "children": []
