--- a/www/apps/docs/content/references/js-client/admin_draft_orders/classes/admin_draft_orders.AdminDraftOrdersResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_draft_orders/classes/admin_draft_orders.AdminDraftOrdersResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -113,7 +113,7 @@ ___
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -223,7 +223,7 @@ ___
       {
         "name": "AdminDraftOrdersListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `draft_orders`: [`DraftOrder`](../../internal/classes/admin_collections.internal.DraftOrder.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersListRes type: object x-expanded-relations: field: draft_orders relations: - order - cart - cart.items - cart.items.adjustments required: - draft_orders - count - offset - limit properties: draft_orders: type: array description: An array of draft order's details. items: $ref: \"#/components/schemas/DraftOrder\" count: type: integer description: The total number of items available offset: type: integer description: The number of draft orders skipped when retrieving the draft orders. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -278,7 +278,7 @@ ___
       {
         "name": "AdminPostDraftOrdersDraftOrderRegisterPaymentRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPostDraftOrdersDraftOrderRegisterPaymentRes type: object required: - order properties: order: description: Order's details. $ref: \"#/components/schemas/Order\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -341,7 +341,7 @@ ___
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -396,7 +396,7 @@ ___
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -459,7 +459,7 @@ ___
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -530,7 +530,7 @@ ___
       {
         "name": "AdminDraftOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminDraftOrdersRes type: object x-expanded-relations: field: draft_order relations: - order - cart - cart.items - cart.items.adjustments - cart.billing_address - cart.customer - cart.discounts - cart.discounts.rule - cart.items - cart.items.adjustments - cart.payment - cart.payment_sessions - cart.region - cart.region.payment_providers - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.shipping_option eager: - cart.region.fulfillment_providers - cart.region.payment_providers - cart.shipping_methods.shipping_option implicit: - cart.discounts - cart.discounts.rule - cart.gift_cards - cart.items - cart.items.adjustments - cart.items.tax_lines - cart.items.variant - cart.items.variant.product - cart.items.variant.product.profiles - cart.region - cart.region.tax_rates - cart.shipping_address - cart.shipping_methods - cart.shipping_methods.tax_lines totals: - cart.discount_total - cart.gift_card_tax_total - cart.gift_card_total - cart.item_tax_total - cart.refundable_amount - cart.refunded_total - cart.shipping_tax_total - cart.shipping_total - cart.subtotal - cart.tax_total - cart.total - cart.items.discount_total - cart.items.gift_card_total - cart.items.original_tax_total - cart.items.original_total - cart.items.refundable - cart.items.subtotal - cart.items.tax_total - cart.items.total required: - draft_order properties: draft_order: description: Draft order's details. $ref: \"#/components/schemas/DraftOrder\"",
         "optional": false,
         "defaultValue": "",
         "children": []
