--- a/www/apps/docs/content/references/js-client/admin_gift_cards/classes/admin_gift_cards.AdminGiftCardsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_gift_cards/classes/admin_gift_cards.AdminGiftCardsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminGiftCardsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema A gift card's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -160,7 +160,7 @@ ___
       {
         "name": "AdminGiftCardsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `gift_cards`: [`GiftCard`](../../internal/classes/admin_collections.internal.GiftCard.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminGiftCardsListRes type: object x-expanded-relations: field: gift_cards relations: - order - region eager: - region.fulfillment_providers - region.payment_providers required: - gift_cards - count - offset - limit properties: gift_cards: type: array items: $ref: \"#/components/schemas/GiftCard\" count: type: integer description: The total number of items available offset: type: integer description: The number of gift cards skipped when retrieving the gift cards. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -215,7 +215,7 @@ ___
       {
         "name": "AdminGiftCardsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema A gift card's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -278,7 +278,7 @@ ___
       {
         "name": "AdminGiftCardsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema A gift card's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
