--- a/www/apps/docs/content/references/js-client/admin_invites/classes/admin_invites.AdminInvitesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_invites/classes/admin_invites.AdminInvitesResource.mdx
@@ -177,7 +177,7 @@ ___
       {
         "name": "AdminListInvitesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminListInvitesRes type: object required: - invites properties: invites: type: array description: An array of invites items: $ref: \"#/components/schemas/Invite\"",
         "optional": false,
         "defaultValue": "",
         "children": []
