--- a/www/apps/docs/content/references/js-client/admin_notes/classes/admin_notes.AdminNotesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_notes/classes/admin_notes.AdminNotesResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminNotesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminNotesRes type: object required: - note properties: note: description: Note details. $ref: \"#/components/schemas/Note\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -152,7 +152,7 @@ ___
       {
         "name": "AdminNotesListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `notes`: [`Note`](../../internal/classes/admin_discounts.internal.internal.Note.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminNotesListRes type: object required: - notes - count - offset - limit properties: notes: type: array description: An array of notes items: $ref: \"#/components/schemas/Note\" count: type: integer description: The total number of items available offset: type: integer description: The number of notes skipped when retrieving the notes. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -203,7 +203,7 @@ ___
       {
         "name": "AdminNotesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminNotesRes type: object required: - note properties: note: description: Note details. $ref: \"#/components/schemas/Note\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -262,7 +262,7 @@ ___
       {
         "name": "AdminNotesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminNotesRes type: object required: - note properties: note: description: Note details. $ref: \"#/components/schemas/Note\"",
         "optional": false,
         "defaultValue": "",
         "children": []
