--- a/www/apps/docs/content/references/js-client/admin_orders/classes/admin_orders.AdminOrdersResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_orders/classes/admin_orders.AdminOrdersResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -109,7 +109,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -160,7 +160,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -219,7 +219,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -286,7 +286,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -345,7 +345,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -404,7 +404,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -471,7 +471,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -522,7 +522,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -573,7 +573,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -632,7 +632,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -699,7 +699,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -758,7 +758,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -817,7 +817,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -876,7 +876,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -943,7 +943,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1010,7 +1010,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1077,7 +1077,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1128,7 +1128,7 @@ ___
       {
         "name": "AdminOrdersListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `orders`: [`Order`](../../internal/classes/admin_collections.internal.Order.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1187,7 +1187,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1246,7 +1246,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1305,7 +1305,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1364,7 +1364,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1423,7 +1423,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1490,7 +1490,7 @@ ___
       {
         "name": "AdminOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
