--- a/www/apps/docs/content/references/js-client/admin_payments/classes/admin_payments.AdminPaymentsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_payments/classes/admin_payments.AdminPaymentsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminPaymentRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -109,7 +109,7 @@ ___
       {
         "name": "AdminRefundRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Refund details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -168,7 +168,7 @@ ___
       {
         "name": "AdminPaymentRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment details",
         "optional": false,
         "defaultValue": "",
         "children": []
