--- a/www/apps/docs/content/references/js-client/admin_price_lists/classes/admin_price_lists.AdminPriceListResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_price_lists/classes/admin_price_lists.AdminPriceListResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminPriceListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Price List details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -109,7 +109,7 @@ ___
       {
         "name": "AdminPriceListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Price List details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -219,7 +219,7 @@ ___
       {
         "name": "AdminPriceListDeleteBatchRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPriceListDeleteBatchRes type: object required: - ids - object - deleted properties: ids: type: array items: type: string description: The IDs of the deleted prices. object: type: string description: The type of the object that was deleted. A price is also named `money-amount`. default: money-amount deleted: type: boolean description: Whether or not the items were deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -278,7 +278,7 @@ ___
       {
         "name": "AdminPriceListDeleteBatchRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPriceListDeleteBatchRes type: object required: - ids - object - deleted properties: ids: type: array items: type: string description: The IDs of the deleted prices. object: type: string description: The type of the object that was deleted. A price is also named `money-amount`. default: money-amount deleted: type: boolean description: Whether or not the items were deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -337,7 +337,7 @@ ___
       {
         "name": "AdminPriceListDeleteBatchRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPriceListDeleteBatchRes type: object required: - ids - object - deleted properties: ids: type: array items: type: string description: The IDs of the deleted prices. object: type: string description: The type of the object that was deleted. A price is also named `money-amount`. default: money-amount deleted: type: boolean description: Whether or not the items were deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -396,7 +396,7 @@ ___
       {
         "name": "AdminPriceListDeleteBatchRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPriceListDeleteBatchRes type: object required: - ids - object - deleted properties: ids: type: array items: type: string description: The IDs of the deleted prices. object: type: string description: The type of the object that was deleted. A price is also named `money-amount`. default: money-amount deleted: type: boolean description: Whether or not the items were deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -447,7 +447,7 @@ ___
       {
         "name": "AdminPriceListsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `price_lists`: [`PriceList`](../../internal/classes/admin_collections.internal.PriceList.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of price lists details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -557,7 +557,7 @@ ___
       {
         "name": "AdminPriceListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Price List details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -616,7 +616,7 @@ ___
       {
         "name": "AdminPriceListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Price List details.",
         "optional": false,
         "defaultValue": "",
         "children": []
