--- a/www/apps/docs/content/references/js-client/admin_product_categories/classes/admin_product_categories.AdminProductCategoriesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_product_categories/classes/admin_product_categories.AdminProductCategoriesResource.mdx
@@ -62,7 +62,7 @@ To use this feature please enable featureflag `product_categories` in your medus
       {
         "name": "AdminProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -117,7 +117,7 @@ ___
       {
         "name": "AdminProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -231,7 +231,7 @@ To use this feature please enable featureflag `product_categories` in your medus
       {
         "name": "AdminProductCategoriesListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_categories`: [`ProductCategory`](../../internal/classes/admin_collections.internal.ProductCategory.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -298,7 +298,7 @@ To use this feature please enable featureflag `product_categories` in your medus
       {
         "name": "AdminProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -365,7 +365,7 @@ To use this feature please enable featureflag `product_categories` in your medus
       {
         "name": "AdminProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -432,7 +432,7 @@ To use this feature please enable featureflag `product_categories` in your medus
       {
         "name": "AdminProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
