--- a/www/apps/docs/content/references/js-client/admin_publishable_api_keys/classes/admin_publishable_api_keys.AdminPublishableApiKeyResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_publishable_api_keys/classes/admin_publishable_api_keys.AdminPublishableApiKeyResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminPublishableApiKeysRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Publishable API key details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -109,7 +109,7 @@ ___
       {
         "name": "AdminPublishableApiKeysRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Publishable API key details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -219,7 +219,7 @@ ___
       {
         "name": "AdminPublishableApiKeysRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Publishable API key details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -270,7 +270,7 @@ ___
       {
         "name": "AdminPublishableApiKeysListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `publishable_api_keys`: [`PublishableApiKey`](../../internal/classes/admin_discounts.internal.internal.PublishableApiKey.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of publishable API keys details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -329,7 +329,7 @@ ___
       {
         "name": "AdminSalesChannelsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `sales_channels`: [`SalesChannel`](../../internal/classes/admin_collections.internal.SalesChannel.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of sales channels details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -388,7 +388,7 @@ ___
       {
         "name": "AdminPublishableApiKeysRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Publishable API key details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -439,7 +439,7 @@ ___
       {
         "name": "AdminPublishableApiKeysRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Publishable API key details.",
         "optional": false,
         "defaultValue": "",
         "children": []
