--- a/www/apps/docs/content/references/js-client/admin_regions/classes/admin_regions.AdminRegionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_regions/classes/admin_regions.AdminRegionsResource.mdx
@@ -538,7 +538,7 @@ ___
       {
         "name": "AdminRegionsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `regions`: [`Region`](../../internal/classes/admin_collections.internal.Region.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of regions details.",
         "optional": false,
         "defaultValue": "",
         "children": []
