--- a/www/apps/docs/content/references/js-client/admin_return_reasons/classes/admin_return_reasons.AdminReturnReasonsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_return_reasons/classes/admin_return_reasons.AdminReturnReasonsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminReturnReasonsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnReasonsRes type: object x-expanded-relations: field: return_reason relations: - parent_return_reason - return_reason_children required: - return_reason properties: return_reason: $ref: \"#/components/schemas/ReturnReason\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -152,7 +152,7 @@ ___
       {
         "name": "AdminReturnReasonsListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnReasonsListRes type: object x-expanded-relations: field: return_reasons relations: - parent_return_reason - return_reason_children required: - return_reasons properties: return_reasons: type: array items: $ref: \"#/components/schemas/ReturnReason\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -207,7 +207,7 @@ ___
       {
         "name": "AdminReturnReasonsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnReasonsRes type: object x-expanded-relations: field: return_reason relations: - parent_return_reason - return_reason_children required: - return_reason properties: return_reason: $ref: \"#/components/schemas/ReturnReason\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -270,7 +270,7 @@ ___
       {
         "name": "AdminReturnReasonsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnReasonsRes type: object x-expanded-relations: field: return_reason relations: - parent_return_reason - return_reason_children required: - return_reason properties: return_reason: $ref: \"#/components/schemas/ReturnReason\"",
         "optional": false,
         "defaultValue": "",
         "children": []
