--- a/www/apps/docs/content/references/js-client/admin_sales_channels/classes/admin_sales_channels.AdminSalesChannelsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_sales_channels/classes/admin_sales_channels.AdminSalesChannelsResource.mdx
@@ -62,7 +62,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -129,7 +129,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -184,7 +184,7 @@ ___
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -298,7 +298,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `sales_channels`: [`SalesChannel`](../../internal/classes/admin_collections.internal.SalesChannel.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of sales channels details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -365,7 +365,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -432,7 +432,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -491,7 +491,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -558,7 +558,7 @@ To use this feature please enable featureflag `sales_channels` in your medusa ba
       {
         "name": "AdminSalesChannelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminSalesChannelsRes type: object required: - sales_channel properties: sales_channel: description: Sales Channel's details. $ref: \"#/components/schemas/SalesChannel\"",
         "optional": false,
         "defaultValue": "",
         "children": []
