--- a/www/apps/docs/content/references/js-client/admin_shipping_options/classes/admin_shipping_options.AdminShippingOptionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_shipping_options/classes/admin_shipping_options.AdminShippingOptionsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminShippingOptionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Shipping option details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -160,7 +160,7 @@ ___
       {
         "name": "AdminShippingOptionsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `shipping_options`: [`ShippingOption`](../../internal/classes/admin_collections.internal.ShippingOption.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of shipping options details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -215,7 +215,7 @@ ___
       {
         "name": "AdminShippingOptionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Shipping option details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -278,7 +278,7 @@ ___
       {
         "name": "AdminShippingOptionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Shipping option details.",
         "optional": false,
         "defaultValue": "",
         "children": []
