--- a/www/apps/docs/content/references/js-client/admin_shipping_profiles/classes/admin_shipping_profiles.AdminShippingProfilesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_shipping_profiles/classes/admin_shipping_profiles.AdminShippingProfilesResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminShippingProfilesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminShippingProfilesRes type: object x-expanded-relations: field: shipping_profile relations: - products - shipping_options required: - shipping_profile properties: shipping_profile: description: Shipping profile details. $ref: \"#/components/schemas/ShippingProfile\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -144,7 +144,7 @@ ___
       {
         "name": "AdminShippingProfilesListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminShippingProfilesListRes type: object required: - shipping_profiles properties: shipping_profiles: type: array description: An array of shipping profiles details. items: $ref: \"#/components/schemas/ShippingProfile\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -195,7 +195,7 @@ ___
       {
         "name": "AdminShippingProfilesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminShippingProfilesRes type: object x-expanded-relations: field: shipping_profile relations: - products - shipping_options required: - shipping_profile properties: shipping_profile: description: Shipping profile details. $ref: \"#/components/schemas/ShippingProfile\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -254,7 +254,7 @@ ___
       {
         "name": "AdminShippingProfilesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminShippingProfilesRes type: object x-expanded-relations: field: shipping_profile relations: - products - shipping_options required: - shipping_profile properties: shipping_profile: description: Shipping profile details. $ref: \"#/components/schemas/ShippingProfile\"",
         "optional": false,
         "defaultValue": "",
         "children": []
