--- a/www/apps/docs/content/references/js-client/admin_stock_locations/classes/admin_stock_locations.AdminStockLocationsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_stock_locations/classes/admin_stock_locations.AdminStockLocationsResource.mdx
@@ -54,7 +54,7 @@ To use this feature please install @medusajs/stock-location
       {
         "name": "AdminStockLocationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Stock location details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -172,7 +172,7 @@ To use this feature please install @medusajs/stock-location
       {
         "name": "AdminStockLocationsListRes",
         "type": "[`PaginatedResponse`](../../admin_discounts/modules/admin_discounts.internal.mdx#paginatedresponse) & { `stock_locations`: [`StockLocationExpandedDTO`](../../admin_discounts/modules/admin_discounts.internal.mdx#stocklocationexpandeddto)[]  }",
-        "description": "",
+        "description": "#### Schema AdminStockLocationsListRes type: object required: - stock_locations - count - offset - limit properties: stock_locations: type: array items: $ref: \"#/components/schemas/StockLocationExpandedDTO\" count: type: integer description: The total number of items available offset: type: integer description: The number of stock locations skipped when retrieving the stock locations. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -231,7 +231,7 @@ To use this feature please install @medusajs/stock-location
       {
         "name": "AdminStockLocationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Stock location details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -298,7 +298,7 @@ To use this feature please install @medusajs/stock-location
       {
         "name": "AdminStockLocationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Stock location details.",
         "optional": false,
         "defaultValue": "",
         "children": []
