--- a/www/apps/docs/content/references/js-client/admin_store/classes/admin_store.AdminStoresResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_store/classes/admin_store.AdminStoresResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminStoresRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminStoresRes type: object required: - store properties: store: description: Store details. $ref: \"#/components/schemas/Store\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "AdminStoresRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminStoresRes type: object required: - store properties: store: description: Store details. $ref: \"#/components/schemas/Store\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -152,7 +152,7 @@ ___
       {
         "name": "AdminPaymentProvidersList",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPaymentProvidersList type: object required: - payment_providers properties: payment_providers: type: array description: An array of payment providers details. items: $ref: \"#/components/schemas/PaymentProvider\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -199,7 +199,7 @@ ___
       {
         "name": "AdminTaxProvidersList",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminTaxProvidersList type: object required: - tax_providers properties: tax_providers: type: array description: An array of tax providers details. items: $ref: \"#/components/schemas/TaxProvider\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -246,7 +246,7 @@ ___
       {
         "name": "AdminExtendedStoresRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminExtendedStoresRes type: object x-expanded-relations: field: store relations: - currencies - default_currency required: - store properties: store: description: Store details. $ref: \"#/components/schemas/ExtendedStoreDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -301,7 +301,7 @@ ___
       {
         "name": "AdminStoresRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminStoresRes type: object required: - store properties: store: description: Store details. $ref: \"#/components/schemas/Store\"",
         "optional": false,
         "defaultValue": "",
         "children": []
