--- a/www/apps/docs/content/references/js-client/admin_swaps/classes/admin_swaps.AdminSwapsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_swaps/classes/admin_swaps.AdminSwapsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminSwapsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `swaps`: [`Swap`](../../internal/classes/admin_collections.internal.Swap.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of swaps details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -101,7 +101,7 @@ ___
       {
         "name": "AdminSwapsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Swap details.",
         "optional": false,
         "defaultValue": "",
         "children": []
