--- a/www/apps/docs/content/references/js-client/admin_tax_rates/classes/admin_tax_rates.AdminTaxRatesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_tax_rates/classes/admin_tax_rates.AdminTaxRatesResource.mdx
@@ -66,7 +66,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -133,7 +133,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -200,7 +200,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -259,7 +259,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -361,7 +361,7 @@ ___
       {
         "name": "AdminTaxRatesListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `tax_rates`: [`TaxRate`](../../internal/classes/admin_collections.internal.TaxRate.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -428,7 +428,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -495,7 +495,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -562,7 +562,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -621,7 +621,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -688,7 +688,7 @@ ___
       {
         "name": "AdminTaxRatesRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Tax rate details.",
         "optional": false,
         "defaultValue": "",
         "children": []
