--- a/www/apps/docs/content/references/js-client/admin_uploads/classes/admin_uploads.AdminUploadsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_uploads/classes/admin_uploads.AdminUploadsResource.mdx
@@ -88,7 +88,7 @@ ___
       {
         "name": "AdminUploadsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Uploaded files details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -135,7 +135,7 @@ ___
       {
         "name": "AdminUploadsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Uploaded files details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -241,7 +241,7 @@ ___
       {
         "name": "AdminUploadsDownloadUrlRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminUploadsDownloadUrlRes type: object required: - download_url properties: download_url: description: The Download URL of the file type: string",
         "optional": false,
         "defaultValue": "",
         "children": []
