--- a/www/apps/docs/content/references/js-client/admin_users/classes/admin_users.AdminUsersResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_users/classes/admin_users.AdminUsersResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminUserRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema User details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -152,7 +152,7 @@ ___
       {
         "name": "AdminUsersListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of users details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -207,7 +207,7 @@ ___
       {
         "name": "AdminUserRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema User details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -264,7 +264,7 @@ Retrieves a given user
       {
         "name": "AdminUserRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema User details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -369,7 +369,7 @@ ___
       {
         "name": "AdminUserRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema User details.",
         "optional": false,
         "defaultValue": "",
         "children": []
