--- a/www/apps/docs/content/references/js-client/admin_variants/classes/admin_variants.AdminVariantsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_variants/classes/admin_variants.AdminVariantsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminGetVariantsVariantInventoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The product variant's.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -103,7 +103,7 @@ List product variants
       {
         "name": "AdminVariantsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `variants`: [`PricedVariant`](../../admin_discounts/modules/admin_discounts.internal.mdx#pricedvariant)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product variant details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -164,7 +164,7 @@ Get a product variant
       {
         "name": "AdminVariantsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product variant's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
