--- a/www/apps/docs/content/references/js-client/auth/classes/auth.AuthResource.mdx
+++ b/www/apps/docs/content/references/js-client/auth/classes/auth.AuthResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -143,7 +143,7 @@ ___
       {
         "name": "StoreGetAuthEmailRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema StoreGetAuthEmailRes type: object required: - exists properties: exists: description: Whether email exists or not. type: boolean",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -190,7 +190,7 @@ ___
       {
         "name": "StoreAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -246,7 +246,7 @@ ___
       {
         "name": "StoreBearerAuthRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema StoreBearerAuthRes type: object properties: accessToken: description: Access token for subsequent authorization. type: string",
         "optional": false,
         "defaultValue": "",
         "children": []
