--- a/www/apps/docs/content/references/js-client/collections/classes/collections.CollectionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/collections/classes/collections.CollectionsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreCollectionsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `collections`: [`ProductCollection`](../../internal/classes/admin_collections.internal.ProductCollection.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product collections details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "StoreCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product collection details.",
         "optional": false,
         "defaultValue": "",
         "children": []
