--- a/www/apps/docs/content/references/js-client/customers/classes/customers.CustomerResource.mdx
+++ b/www/apps/docs/content/references/js-client/customers/classes/customers.CustomerResource.mdx
@@ -73,7 +73,7 @@ Creates a customer
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -171,7 +171,7 @@ Retrieve customer orders
       {
         "name": "StoreCustomersListOrdersRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `orders`: [`Order`](../../internal/classes/admin_collections.internal.Order.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of orders details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -224,7 +224,7 @@ Resets customer password
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -269,7 +269,7 @@ Retrieves the customer that is currently logged
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -322,7 +322,7 @@ Updates a customer
       {
         "name": "StoreCustomersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Customer details.",
         "optional": false,
         "defaultValue": "",
         "children": []
