--- a/www/apps/docs/content/references/js-client/gift_cards/classes/gift_cards.GiftCardsResource.mdx
+++ b/www/apps/docs/content/references/js-client/gift_cards/classes/gift_cards.GiftCardsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreGiftCardsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Gift card details.",
         "optional": false,
         "defaultValue": "",
         "children": []
