--- a/www/apps/docs/content/references/js-client/internal/classes/admin_collections.internal.Order.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_collections.internal.Order.mdx
@@ -238,6 +238,14 @@ Base abstract entity for all entities
     "children": []
   },
   {
+    "name": "item_tax_total",
+    "type": "``null`` \\| `number`",
+    "description": "",
+    "optional": false,
+    "defaultValue": "",
+    "children": []
+  },
+  {
     "name": "items",
     "type": "[`LineItem`](admin_collections.internal.LineItem.mdx)[]",
     "description": "",
@@ -392,6 +400,14 @@ Base abstract entity for all entities
   {
     "name": "shipping_methods",
     "type": "[`ShippingMethod`](admin_collections.internal.ShippingMethod.mdx)[]",
+    "description": "",
+    "optional": false,
+    "defaultValue": "",
+    "children": []
+  },
+  {
+    "name": "shipping_tax_total",
+    "type": "``null`` \\| `number`",
     "description": "",
     "optional": false,
     "defaultValue": "",
