--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.Blob.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.Blob.mdx
@@ -21,7 +21,7 @@ v15.7.0, v14.18.0
   {
     "name": "size",
     "type": "`number`",
-    "description": "The total size of the `Blob` in bytes.",
+    "description": "The total size of the `Blob` in bytes. #### Since v15.7.0, v14.18.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -29,7 +29,7 @@ v15.7.0, v14.18.0
   {
     "name": "type",
     "type": "`string`",
-    "description": "The content-type of the `Blob`.",
+    "description": "The content-type of the `Blob`. #### Since v15.7.0, v14.18.0",
     "optional": false,
     "defaultValue": "",
     "children": []
