--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.FlagRouter.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.FlagRouter.mdx
@@ -85,7 +85,7 @@ ___
   {
     "name": "FeatureFlagsResponse",
     "type": "{ `key`: `string` ; `value`: `boolean` \\| Record<`string`, `boolean`\\>  }[]",
-    "description": "",
+    "description": "#### Schema FeatureFlagsResponse type: array items: type: object required: - key - value properties: key: description: The key of the feature flag. type: string value: description: The value of the feature flag. type: boolean",
     "optional": false,
     "defaultValue": "",
     "children": []
