--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.MedusaError.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.MedusaError.mdx
@@ -176,7 +176,7 @@ Standardized error to be used across Medusa project.
   {
     "name": "prepareStackTrace",
     "type": "(`err`: [`Error`](../../admin_discounts/modules/admin_discounts.internal.mdx#error), `stackTraces`: [`CallSite`](../interfaces/admin_discounts.internal.CallSite.mdx)[]) => `any`",
-    "description": "Optional override for formatting stack traces",
+    "description": "Optional override for formatting stack traces #### See https://v8.dev/docs/stack-trace-api#customizing-stack-traces",
     "optional": true,
     "defaultValue": "",
     "children": []
