--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.AdminPostProductsProductReq.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.AdminPostProductsProductReq.mdx
@@ -164,7 +164,7 @@ The title of the Product`published`.
     "name": "status",
     "type": "[`ProductStatus`](../enums/admin_collections.internal.ProductStatus.mdx)",
     "description": "",
-    "optional": true,
+    "optional": false,
     "defaultValue": "",
     "children": []
   },
