--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.ProductVariantInventoryService.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.ProductVariantInventoryService.mdx
@@ -821,7 +821,7 @@ lists inventory items for a given variant
           {
             "name": "InventoryItemDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema Title of the inventory item",
             "optional": false,
             "defaultValue": "",
             "children": []
