--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.TaxProviderService.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.internal.TaxProviderService.mdx
@@ -64,7 +64,7 @@ Finds tax providers and assists in tax related operations.
   {
     "name": "getCacheKey",
     "type": "`any`",
-    "description": "The cache key to get cache hits by.",
+    "description": "The cache key to get cache hits by. #### Param the entity id to cache #### Param the region id to cache",
     "optional": false,
     "defaultValue": "",
     "children": []
