--- a/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.BlobOptions.mdx
+++ b/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.BlobOptions.mdx
@@ -14,7 +14,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
   {
     "name": "encoding",
     "type": "[`BufferEncoding`](../../admin_discounts/modules/admin_discounts.internal.mdx#bufferencoding)",
-    "description": "",
+    "description": "#### Default ```ts 'utf8' ```",
     "optional": true,
     "defaultValue": "",
     "children": []
