--- a/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.BufferConstructor.mdx
+++ b/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.BufferConstructor.mdx
@@ -18,7 +18,7 @@ Valid string encodings: 'ascii'|'utf8'|'utf16le'|'ucs2'(alias of 'utf16le')|'bas
   {
     "name": "poolSize",
     "type": "`number`",
-    "description": "This is the size (in bytes) of pre-allocated internal `Buffer` instances used for pooling. This value may be modified.",
+    "description": "This is the size (in bytes) of pre-allocated internal `Buffer` instances used for pooling. This value may be modified. #### Since v0.11.3",
     "optional": false,
     "defaultValue": "",
     "children": []
