--- a/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.IInventoryService.mdx
+++ b/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.IInventoryService.mdx
@@ -87,7 +87,7 @@ ___
       {
         "name": "InventoryLevelDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The date with timezone at which the resource was created.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -205,7 +205,7 @@ ___
       {
         "name": "InventoryItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Title of the inventory item",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -263,7 +263,7 @@ ___
           {
             "name": "InventoryItemDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema Title of the inventory item",
             "optional": false,
             "defaultValue": "",
             "children": []
@@ -316,7 +316,7 @@ ___
       {
         "name": "InventoryLevelDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The date with timezone at which the resource was created.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -374,7 +374,7 @@ ___
           {
             "name": "InventoryLevelDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema The date with timezone at which the resource was created.",
             "optional": false,
             "defaultValue": "",
             "children": []
@@ -427,7 +427,7 @@ ___
       {
         "name": "ReservationItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a reservation of an inventory item at a stock location",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -485,7 +485,7 @@ ___
           {
             "name": "ReservationItemDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema Represents a reservation of an inventory item at a stock location",
             "optional": false,
             "defaultValue": "",
             "children": []
@@ -959,6 +959,48 @@ ___
 
 ___
 
+### restoreInventoryItem
+
+▸ **restoreInventoryItem**(`inventoryItemId`, `context?`): `Promise`<`void`\>
+
+#### Parameters
+
+<ParameterTypes parameters={[
+  {
+    "name": "inventoryItemId",
+    "type": "`string` \\| `string`[]",
+    "description": "",
+    "optional": false,
+    "defaultValue": "",
+    "children": []
+  },
+  {
+    "name": "context",
+    "type": "[`SharedContext`](../../admin_discounts/modules/admin_discounts.internal.mdx#sharedcontext)",
+    "description": "",
+    "optional": true,
+    "defaultValue": "",
+    "children": []
+  }
+]} />
+
+#### Returns
+
+`Promise`<`void`\>
+
+<ParameterTypes parameters={[
+  {
+    "name": "Promise",
+    "type": "`Promise`<`void`\\>",
+    "optional": false,
+    "defaultValue": "",
+    "description": "",
+    "children": []
+  }
+]} />
+
+___
+
 ### retrieveAvailableQuantity
 
 ▸ **retrieveAvailableQuantity**(`inventoryItemId`, `locationIds`, `context?`): `Promise`<`number`\>
@@ -1066,7 +1108,7 @@ ___
       {
         "name": "InventoryItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Title of the inventory item",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1125,7 +1167,7 @@ ___
       {
         "name": "InventoryLevelDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The date with timezone at which the resource was created.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1176,7 +1218,7 @@ ___
       {
         "name": "ReservationItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a reservation of an inventory item at a stock location",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1353,7 +1395,7 @@ ___
       {
         "name": "InventoryItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Title of the inventory item",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1420,7 +1462,7 @@ ___
       {
         "name": "InventoryLevelDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema The date with timezone at which the resource was created.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -1478,7 +1520,7 @@ ___
           {
             "name": "InventoryLevelDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema The date with timezone at which the resource was created.",
             "optional": false,
             "defaultValue": "",
             "children": []
@@ -1539,7 +1581,7 @@ ___
       {
         "name": "ReservationItemDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a reservation of an inventory item at a stock location",
         "optional": false,
         "defaultValue": "",
         "children": []
