--- a/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.IStockLocationService.mdx
+++ b/www/apps/docs/content/references/js-client/internal/interfaces/admin_discounts.internal.IStockLocationService.mdx
@@ -71,7 +71,7 @@ ___
       {
         "name": "StockLocationDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a Stock Location",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -179,7 +179,7 @@ ___
           {
             "name": "StockLocationDTO",
             "type": "`object`",
-            "description": "",
+            "description": "#### Schema Represents a Stock Location",
             "optional": false,
             "defaultValue": "",
             "children": []
@@ -307,7 +307,7 @@ ___
       {
         "name": "StockLocationDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a Stock Location",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -366,7 +366,7 @@ ___
       {
         "name": "StockLocationDTO",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Represents a Stock Location",
         "optional": false,
         "defaultValue": "",
         "children": []
