--- a/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal-2.mdx
+++ b/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal-2.mdx
@@ -716,7 +716,7 @@ Returns whether the stream has encountered an error.
 <ParameterTypes parameters={[
   {
     "name": "stream",
-    "type": "[`ReadableStream`](../interfaces/admin_discounts.internal.ReadableStream.mdx) \\| [`WritableStream`](../interfaces/admin_discounts.internal.WritableStream.mdx) \\| [`Readable`](../classes/admin_discounts.internal.Readable.mdx) \\| [`Writable`](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx)",
+    "type": "[`ReadableStream`](../interfaces/admin_discounts.internal.ReadableStream.mdx) \\| [`Readable`](../classes/admin_discounts.internal.Readable.mdx) \\| [`WritableStream`](../interfaces/admin_discounts.internal.WritableStream.mdx) \\| [`Writable`](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx)",
     "description": "",
     "optional": false,
     "defaultValue": "",
