--- a/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal-4.mdx
+++ b/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal-4.mdx
@@ -76,7 +76,7 @@ ___
       {
         "name": "size",
         "type": "`number`",
-        "description": "The total size of the `Blob` in bytes.",
+        "description": "The total size of the `Blob` in bytes. #### Since v15.7.0, v14.18.0",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -84,7 +84,7 @@ ___
       {
         "name": "type",
         "type": "`string`",
-        "description": "The content-type of the `Blob`.",
+        "description": "The content-type of the `Blob`. #### Since v15.7.0, v14.18.0",
         "optional": false,
         "defaultValue": "",
         "children": []
