--- a/www/apps/docs/content/references/js-client/order_edits/classes/order_edits.OrderEditsResource.mdx
+++ b/www/apps/docs/content/references/js-client/order_edits/classes/order_edits.OrderEditsResource.mdx
@@ -160,7 +160,7 @@ ___
       {
         "name": "StoreOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details.",
         "optional": false,
         "defaultValue": "",
         "children": []
