--- a/www/apps/docs/content/references/js-client/orders/classes/orders.OrdersResource.mdx
+++ b/www/apps/docs/content/references/js-client/orders/classes/orders.OrdersResource.mdx
@@ -96,7 +96,7 @@ ___
       {
         "name": "StoreOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -197,7 +197,7 @@ ___
       {
         "name": "StoreOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -252,7 +252,7 @@ ___
       {
         "name": "StoreOrdersRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order details.",
         "optional": false,
         "defaultValue": "",
         "children": []
