--- a/www/apps/docs/content/references/js-client/payment_collections/classes/payment_collections.PaymentCollectionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/payment_collections/classes/payment_collections.PaymentCollectionsResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StorePaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment collection's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -117,7 +117,7 @@ ___
       {
         "name": "StorePaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment collection's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -176,7 +176,7 @@ ___
       {
         "name": "StorePaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment collection's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -235,7 +235,7 @@ ___
       {
         "name": "StorePaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment collection's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -294,7 +294,7 @@ ___
       {
         "name": "StorePaymentCollectionsSessionRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment session's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -353,7 +353,7 @@ ___
       {
         "name": "StorePaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Payment collection's details.",
         "optional": false,
         "defaultValue": "",
         "children": []
