--- a/www/apps/docs/content/references/js-client/payment_methods/classes/payment_methods.PaymentMethodsResource.mdx
+++ b/www/apps/docs/content/references/js-client/payment_methods/classes/payment_methods.PaymentMethodsResource.mdx
@@ -44,7 +44,7 @@ Lists customer payment methods
       {
         "name": "StoreCustomersListPaymentMethodsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of saved payment method details.",
         "optional": false,
         "defaultValue": "",
         "children": []
