--- a/www/apps/docs/content/references/js-client/product_categories/classes/product_categories.ProductCategoriesResource.mdx
+++ b/www/apps/docs/content/references/js-client/product_categories/classes/product_categories.ProductCategoriesResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreGetProductCategoriesRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_categories`: [`ProductCategory`](../../internal/classes/admin_collections.internal.ProductCategory.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product categories details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -113,7 +113,7 @@ ___
       {
         "name": "StoreGetProductCategoriesCategoryRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product category details.",
         "optional": false,
         "defaultValue": "",
         "children": []
