--- a/www/apps/docs/content/references/js-client/product_variants/classes/product_variants.ProductVariantsResource.mdx
+++ b/www/apps/docs/content/references/js-client/product_variants/classes/product_variants.ProductVariantsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreVariantsListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of product variant descriptions.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "StoreVariantsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product variant description.",
         "optional": false,
         "defaultValue": "",
         "children": []
