--- a/www/apps/docs/content/references/js-client/products/classes/products.ProductsResource.mdx
+++ b/www/apps/docs/content/references/js-client/products/classes/products.ProductsResource.mdx
@@ -63,7 +63,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreProductsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `products`: [`PricedProduct`](../../admin_discounts/modules/admin_discounts.internal.mdx#pricedproduct)[]  }",
-        "description": "",
+        "description": "#### Schema An array of products details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -118,7 +118,7 @@ ___
       {
         "name": "StoreProductsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Product details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -173,7 +173,7 @@ ___
       {
         "name": "StorePostSearchRes",
         "type": "{ `hits`: `unknown`[]  } & Record<`string`, `unknown`\\>",
-        "description": "",
+        "description": "#### Schema Array of search results. The format of the items depends on the search engine installed on the Medusa backend.",
         "optional": false,
         "defaultValue": "",
         "children": []
