--- a/www/apps/docs/content/references/js-client/regions/classes/regions.RegionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/regions/classes/regions.RegionsResource.mdx
@@ -42,7 +42,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreRegionsListRes",
         "type": "[`PaginatedResponse`](../../admin_discounts/modules/admin_discounts.internal.mdx#paginatedresponse) & { `regions`: [`Region`](../../internal/classes/admin_collections.internal.Region.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of regions details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -97,7 +97,7 @@ ___
       {
         "name": "StoreRegionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Region details.",
         "optional": false,
         "defaultValue": "",
         "children": []
