--- a/www/apps/docs/content/references/js-client/return_reasons/classes/return_reasons.ReturnReasonsResource.mdx
+++ b/www/apps/docs/content/references/js-client/return_reasons/classes/return_reasons.ReturnReasonsResource.mdx
@@ -44,7 +44,7 @@ Lists return reasons defined in Medusa Admin
       {
         "name": "StoreReturnReasonsListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of return reasons details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -95,7 +95,7 @@ ___
       {
         "name": "StoreReturnReasonsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Return reason details.",
         "optional": false,
         "defaultValue": "",
         "children": []
