--- a/www/apps/docs/content/references/js-client/returns/classes/returns.ReturnsResource.mdx
+++ b/www/apps/docs/content/references/js-client/returns/classes/returns.ReturnsResource.mdx
@@ -52,7 +52,7 @@ Creates a return request
       {
         "name": "StoreReturnsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Return details.",
         "optional": false,
         "defaultValue": "",
         "children": []
