--- a/www/apps/docs/content/references/js-client/shipping_options/classes/shipping_options.ShippingOptionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/shipping_options/classes/shipping_options.ShippingOptionsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreShippingOptionsListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of shipping options details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "StoreShippingOptionsListRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema An array of shipping options details.",
         "optional": false,
         "defaultValue": "",
         "children": []
