--- a/www/apps/docs/content/references/js-client/swaps/classes/swaps.SwapsResource.mdx
+++ b/www/apps/docs/content/references/js-client/swaps/classes/swaps.SwapsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreSwapsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Swap details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "StoreSwapsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Swap details.",
         "optional": false,
         "defaultValue": "",
         "children": []
