--- a/www/apps/docs/content/references/js-client/admin_inventory_item/classes/admin_inventory_item.AdminInventoryItemsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_inventory_item/classes/admin_inventory_item.AdminInventoryItemsResource.mdx
@@ -62,7 +62,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -137,7 +137,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -271,7 +271,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -330,7 +330,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsListWithVariantsAndLocationLevelsRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `inventory_items`: [`DecoratedInventoryItemDTO`](../../internal/modules/admin_discounts.internal.internal.mdx#decoratedinventoryitemdto)[]  }",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsListWithVariantsAndLocationLevelsRes type: object required: - inventory_items - count - offset - limit properties: inventory_items: type: array description: an array of Inventory Item details items: $ref: \"#/components/schemas/DecoratedInventoryItemDTO\" count: type: integer description: The total number of items available offset: type: integer description: The number of inventory items skipped when retrieving the inventory items. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -397,7 +397,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsLocationLevelsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsLocationLevelsRes type: object required: - inventory_item properties: inventory_item: type: object required: - id - location_levels properties: id: description: The id of the location location_levels: description: List of stock levels at a given location type: array items: $ref: \"#/components/schemas/InventoryLevelDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -464,7 +464,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -539,7 +539,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -622,7 +622,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminInventoryItemsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminInventoryItemsRes type: object required: - inventory_item properties: inventory_item: description: Inventory Item details $ref: \"#/components/schemas/InventoryItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
