--- a/www/apps/docs/content/references/js-client/admin_order_edits/classes/admin_order_edits.AdminOrderEditsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_order_edits/classes/admin_order_edits.AdminOrderEditsResource.mdx
@@ -58,7 +58,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -109,7 +109,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -160,7 +160,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -211,7 +211,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -321,7 +321,7 @@ ___
       {
         "name": "AdminOrderEditItemChangeDeleteRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminOrderEditItemChangeDeleteRes type: object required: - id - object - deleted properties: id: type: string description: The ID of the deleted Order Edit Item Change. object: type: string description: The type of the object that was deleted. default: item_change deleted: type: boolean description: Whether or not the Order Edit Item Change was deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -372,7 +372,7 @@ ___
       {
         "name": "AdminOrderEditsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `order_edits`: [`OrderEdit`](../../internal/classes/admin_collections.internal.OrderEdit.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -431,7 +431,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -482,7 +482,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -541,7 +541,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -600,7 +600,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -667,7 +667,7 @@ ___
       {
         "name": "AdminOrderEditsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Order edit details",
         "optional": false,
         "defaultValue": "",
         "children": []
