--- a/www/apps/docs/content/references/js-client/admin_payment_collections/classes/admin_payment_collections.AdminPaymentCollectionsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_payment_collections/classes/admin_payment_collections.AdminPaymentCollectionsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminPaymentCollectionDeleteRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPaymentCollectionDeleteRes type: object required: - id - object - deleted properties: id: type: string description: The ID of the deleted Payment Collection. object: type: string description: The type of the object that was deleted. default: payment_collection deleted: type: boolean description: Whether or not the Payment Collection was deleted. default: true",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -101,7 +101,7 @@ ___
       {
         "name": "AdminPaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPaymentCollectionsRes type: object x-expanded-relations: field: payment_collection relations: - payment_sessions - payments - region eager: - region.fulfillment_providers - region.payment_providers required: - payment_collection properties: payment_collection: description: Payment Collection details. $ref: \"#/components/schemas/PaymentCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -160,7 +160,7 @@ ___
       {
         "name": "AdminPaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPaymentCollectionsRes type: object x-expanded-relations: field: payment_collection relations: - payment_sessions - payments - region eager: - region.fulfillment_providers - region.payment_providers required: - payment_collection properties: payment_collection: description: Payment Collection details. $ref: \"#/components/schemas/PaymentCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -219,7 +219,7 @@ ___
       {
         "name": "AdminPaymentCollectionsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminPaymentCollectionsRes type: object x-expanded-relations: field: payment_collection relations: - payment_sessions - payments - region eager: - region.fulfillment_providers - region.payment_providers required: - payment_collection properties: payment_collection: description: Payment Collection details. $ref: \"#/components/schemas/PaymentCollection\"",
         "optional": false,
         "defaultValue": "",
         "children": []
