--- a/www/apps/docs/content/references/js-client/admin_product_tags/classes/admin_product_tags.AdminProductTagsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_product_tags/classes/admin_product_tags.AdminProductTagsResource.mdx
@@ -42,7 +42,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminProductTagsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_tags`: [`ProductTag`](../../internal/classes/admin_collections.internal.ProductTag.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product tag details.",
         "optional": false,
         "defaultValue": "",
         "children": []
