--- a/www/apps/docs/content/references/js-client/admin_product_types/classes/admin_product_types.AdminProductTypesResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_product_types/classes/admin_product_types.AdminProductTypesResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminProductTypesListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_types`: [`ProductType`](../../internal/classes/admin_collections.internal.ProductType.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminProductTypesListRes type: object required: - product_types - count - offset - limit properties: product_types: type: array description: An array of product types details. items: $ref: \"#/components/schemas/ProductType\" count: type: integer description: The total number of items available offset: type: integer description: The number of product types skipped when retrieving the product types. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
