--- a/www/apps/docs/content/references/js-client/admin_reservations/classes/admin_reservations.AdminReservationsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_reservations/classes/admin_reservations.AdminReservationsResource.mdx
@@ -52,7 +52,7 @@ create a reservation
       {
         "name": "AdminReservationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReservationsRes type: object required: - reservation properties: reservation: description: Reservation details. $ref: \"#/components/schemas/ReservationItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -172,7 +172,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminReservationsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `reservations`: [`ReservationItemDTO`](../../admin_discounts/modules/admin_discounts.internal.mdx#reservationitemdto)[]  }",
-        "description": "",
+        "description": "#### Schema AdminReservationsListRes type: object required: - reservations - count - offset - limit properties: reservations: type: array description: An array of reservations details. items: $ref: \"#/components/schemas/ExtendedReservationItem\" count: type: integer description: The total number of items available offset: type: integer description: The number of reservations skipped when retrieving the reservations. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -231,7 +231,7 @@ To use this feature please install @medusajs/inventory
       {
         "name": "AdminReservationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReservationsRes type: object required: - reservation properties: reservation: description: Reservation details. $ref: \"#/components/schemas/ReservationItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -296,7 +296,7 @@ update a reservation
       {
         "name": "AdminReservationsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReservationsRes type: object required: - reservation properties: reservation: description: Reservation details. $ref: \"#/components/schemas/ReservationItemDTO\"",
         "optional": false,
         "defaultValue": "",
         "children": []
