--- a/www/apps/docs/content/references/js-client/admin_returns/classes/admin_returns.AdminReturnsResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_returns/classes/admin_returns.AdminReturnsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "AdminReturnsCancelRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnsCancelRes type: object x-expanded-relations: field: order relations: - billing_address - claims - claims.additional_items - claims.additional_items.variant - claims.claim_items - claims.claim_items.images - claims.claim_items.item - claims.fulfillments - claims.fulfillments.tracking_links - claims.return_order - claims.return_order.shipping_method - claims.return_order.shipping_method.tax_lines - claims.shipping_address - claims.shipping_methods - customer - discounts - discounts.rule - fulfillments - fulfillments.items - fulfillments.tracking_links - gift_card_transactions - gift_cards - items - payments - refunds - region - returns - returns.items - returns.items.reason - returns.shipping_method - returns.shipping_method.tax_lines - shipping_address - shipping_methods - swaps - swaps.additional_items - swaps.additional_items.variant - swaps.fulfillments - swaps.fulfillments.tracking_links - swaps.payment - swaps.return_order - swaps.return_order.shipping_method - swaps.return_order.shipping_method.tax_lines - swaps.shipping_address - swaps.shipping_methods - swaps.shipping_methods.tax_lines required: - order properties: order: description: Order details. $ref: \"#/components/schemas/Order\"",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -105,7 +105,7 @@ ___
       {
         "name": "AdminReturnsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `returns`: [`Return`](../../internal/classes/admin_collections.internal.Return.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema AdminReturnsListRes type: object x-expanded-relation: field: returns relations: - order - swap required: - returns - count - offset - limit properties: returns: type: array description: An array of returns details. items: $ref: \"#/components/schemas/Return\" count: type: integer description: The total number of items available offset: type: integer description: The number of returns skipped when retrieving the returns. limit: type: integer description: The number of items per page",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -168,7 +168,7 @@ ___
       {
         "name": "AdminReturnsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema AdminReturnsRes type: object x-expanded-relation: field: return relations: - swap required: - return properties: return: description: Return details. $ref: \"#/components/schemas/Return\"",
         "optional": false,
         "defaultValue": "",
         "children": []
