--- a/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.PassThrough.mdx
+++ b/www/apps/docs/content/references/js-client/internal/classes/admin_discounts.internal.PassThrough.mdx
@@ -17,7 +17,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "allowHalfOpen",
     "type": "`boolean`",
-    "description": "If `false` then the stream will automatically end the writable side when the readable side ends. Set initially by the `allowHalfOpen` constructor option, which defaults to `true`. This can be changed manually to change the half-open behavior of an existing`Duplex` stream instance, but must be changed before the `'end'` event is emitted.",
+    "description": "If `false` then the stream will automatically end the writable side when the readable side ends. Set initially by the `allowHalfOpen` constructor option, which defaults to `true`. This can be changed manually to change the half-open behavior of an existing`Duplex` stream instance, but must be changed before the `'end'` event is emitted. #### Since v0.9.4",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -25,7 +25,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "closed",
     "type": "`boolean`",
-    "description": "Is `true` after `'close'` has been emitted.",
+    "description": "Is `true` after `'close'` has been emitted. #### Since v18.0.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -33,7 +33,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "destroyed",
     "type": "`boolean`",
-    "description": "Is `true` after `readable.destroy()` has been called.",
+    "description": "Is `true` after `readable.destroy()` has been called. #### Since v8.0.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -41,7 +41,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "errored",
     "type": "``null`` \\| [`Error`](../../admin_discounts/modules/admin_discounts.internal.mdx#error)",
-    "description": "Returns error if the stream has been destroyed with an error.",
+    "description": "Returns error if the stream has been destroyed with an error. #### Since v18.0.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -49,7 +49,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readable",
     "type": "`boolean`",
-    "description": "Is `true` if it is safe to call `readable.read()`, which means the stream has not been destroyed or emitted `'error'` or `'end'`.",
+    "description": "Is `true` if it is safe to call `readable.read()`, which means the stream has not been destroyed or emitted `'error'` or `'end'`. #### Since v11.4.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -57,7 +57,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableAborted",
     "type": "`boolean`",
-    "description": "Returns whether the stream was destroyed or errored before emitting `'end'`.",
+    "description": "Returns whether the stream was destroyed or errored before emitting `'end'`. #### Since v16.8.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -65,7 +65,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableDidRead",
     "type": "`boolean`",
-    "description": "Returns whether `'data'` has been emitted.",
+    "description": "Returns whether `'data'` has been emitted. #### Since v16.7.0, v14.18.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -73,7 +73,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableEncoding",
     "type": "``null`` \\| [`BufferEncoding`](../../admin_discounts/modules/admin_discounts.internal.mdx#bufferencoding)",
-    "description": "Getter for the property `encoding` of a given `Readable` stream. The `encoding`property can be set using the `readable.setEncoding()` method.",
+    "description": "Getter for the property `encoding` of a given `Readable` stream. The `encoding`property can be set using the `readable.setEncoding()` method. #### Since v12.7.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -81,7 +81,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableEnded",
     "type": "`boolean`",
-    "description": "Becomes `true` when `'end'` event is emitted.",
+    "description": "Becomes `true` when `'end'` event is emitted. #### Since v12.9.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -89,7 +89,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableFlowing",
     "type": "``null`` \\| `boolean`",
-    "description": "This property reflects the current state of a `Readable` stream as described in the `Three states` section.",
+    "description": "This property reflects the current state of a `Readable` stream as described in the `Three states` section. #### Since v9.4.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -97,7 +97,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableHighWaterMark",
     "type": "`number`",
-    "description": "Returns the value of `highWaterMark` passed when creating this `Readable`.",
+    "description": "Returns the value of `highWaterMark` passed when creating this `Readable`. #### Since v9.3.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -105,7 +105,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableLength",
     "type": "`number`",
-    "description": "This property contains the number of bytes (or objects) in the queue ready to be read. The value provides introspection data regarding the status of the `highWaterMark`.",
+    "description": "This property contains the number of bytes (or objects) in the queue ready to be read. The value provides introspection data regarding the status of the `highWaterMark`. #### Since v9.4.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -113,7 +113,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "readableObjectMode",
     "type": "`boolean`",
-    "description": "Getter for the property `objectMode` of a given `Readable` stream.",
+    "description": "Getter for the property `objectMode` of a given `Readable` stream. #### Since v12.3.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -121,7 +121,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writable",
     "type": "`boolean`",
-    "description": "Is `true` if it is safe to call `writable.write()`, which means the stream has not been destroyed, errored, or ended.",
+    "description": "Is `true` if it is safe to call `writable.write()`, which means the stream has not been destroyed, errored, or ended. #### Since v11.4.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -129,7 +129,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableCorked",
     "type": "`number`",
-    "description": "Number of times `writable.uncork()` needs to be called in order to fully uncork the stream.",
+    "description": "Number of times `writable.uncork()` needs to be called in order to fully uncork the stream. #### Since v13.2.0, v12.16.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -137,7 +137,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableEnded",
     "type": "`boolean`",
-    "description": "Is `true` after `writable.end()` has been called. This property does not indicate whether the data has been flushed, for this use `writable.writableFinished` instead.",
+    "description": "Is `true` after `writable.end()` has been called. This property does not indicate whether the data has been flushed, for this use `writable.writableFinished` instead. #### Since v12.9.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -145,7 +145,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableFinished",
     "type": "`boolean`",
-    "description": "Is set to `true` immediately before the `'finish'` event is emitted.",
+    "description": "Is set to `true` immediately before the `'finish'` event is emitted. #### Since v12.6.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -153,7 +153,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableHighWaterMark",
     "type": "`number`",
-    "description": "Return the value of `highWaterMark` passed when creating this `Writable`.",
+    "description": "Return the value of `highWaterMark` passed when creating this `Writable`. #### Since v9.3.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -161,7 +161,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableLength",
     "type": "`number`",
-    "description": "This property contains the number of bytes (or objects) in the queue ready to be written. The value provides introspection data regarding the status of the `highWaterMark`.",
+    "description": "This property contains the number of bytes (or objects) in the queue ready to be written. The value provides introspection data regarding the status of the `highWaterMark`. #### Since v9.4.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -169,7 +169,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableNeedDrain",
     "type": "`boolean`",
-    "description": "Is `true` if the stream's buffer has been full and stream will emit `'drain'`.",
+    "description": "Is `true` if the stream's buffer has been full and stream will emit `'drain'`. #### Since v15.2.0, v14.17.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -177,15 +177,15 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "writableObjectMode",
     "type": "`boolean`",
-    "description": "Getter for the property `objectMode` of a given `Writable` stream.",
+    "description": "Getter for the property `objectMode` of a given `Writable` stream. #### Since v12.3.0",
     "optional": false,
     "defaultValue": "",
     "children": []
   },
   {
     "name": "captureRejectionSymbol",
-    "type": "typeof [`captureRejectionSymbol`](admin_discounts.internal.PassThrough.mdx#capturerejectionsymbol)",
-    "description": "Value: `Symbol.for('nodejs.rejection')` See how to write a custom `rejection handler`.",
+    "type": "typeof [`captureRejectionSymbol`](admin_discounts.internal.Socket.mdx#capturerejectionsymbol)",
+    "description": "Value: `Symbol.for('nodejs.rejection')` See how to write a custom `rejection handler`. #### Since v13.4.0, v12.16.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -193,7 +193,7 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "captureRejections",
     "type": "`boolean`",
-    "description": "Value: [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type) Change the default `captureRejections` option on all new `EventEmitter` objects.",
+    "description": "Value: [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type) Change the default `captureRejections` option on all new `EventEmitter` objects. #### Since v13.4.0, v12.16.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -201,15 +201,15 @@ primarily for examples and testing, but there are some use cases where`stream.Pa
   {
     "name": "defaultMaxListeners",
     "type": "`number`",
-    "description": "By default, a maximum of `10` listeners can be registered for any single event. This limit can be changed for individual `EventEmitter` instances using the `emitter.setMaxListeners(n)` method. To change the default for _all_`EventEmitter` instances, the `events.defaultMaxListeners`property can be used. If this value is not a positive number, a `RangeError`is thrown. Take caution when setting the `events.defaultMaxListeners` because the change affects _all_`EventEmitter` instances, including those created before the change is made. However, calling `emitter.setMaxListeners(n)` still has precedence over `events.defaultMaxListeners`. This is not a hard limit. The `EventEmitter` instance will allow more listeners to be added but will output a trace warning to stderr indicating that a \"possible EventEmitter memory leak\" has been detected. For any single`EventEmitter`, the `emitter.getMaxListeners()` and `emitter.setMaxListeners()`methods can be used to temporarily avoid this warning: ```js import { EventEmitter } from 'node:events'; const emitter = new EventEmitter(); emitter.setMaxListeners(emitter.getMaxListeners() + 1); emitter.once('event', () => { // do stuff emitter.setMaxListeners(Math.max(emitter.getMaxListeners() - 1, 0)); }); ``` The `--trace-warnings` command-line flag can be used to display the stack trace for such warnings. The emitted warning can be inspected with `process.on('warning')` and will have the additional `emitter`, `type`, and `count` properties, referring to the event emitter instance, the event's name and the number of attached listeners, respectively. Its `name` property is set to `'MaxListenersExceededWarning'`.",
+    "description": "By default, a maximum of `10` listeners can be registered for any single event. This limit can be changed for individual `EventEmitter` instances using the `emitter.setMaxListeners(n)` method. To change the default for _all_`EventEmitter` instances, the `events.defaultMaxListeners`property can be used. If this value is not a positive number, a `RangeError`is thrown. Take caution when setting the `events.defaultMaxListeners` because the change affects _all_`EventEmitter` instances, including those created before the change is made. However, calling `emitter.setMaxListeners(n)` still has precedence over `events.defaultMaxListeners`. This is not a hard limit. The `EventEmitter` instance will allow more listeners to be added but will output a trace warning to stderr indicating that a \"possible EventEmitter memory leak\" has been detected. For any single`EventEmitter`, the `emitter.getMaxListeners()` and `emitter.setMaxListeners()`methods can be used to temporarily avoid this warning: ```js import { EventEmitter } from 'node:events'; const emitter = new EventEmitter(); emitter.setMaxListeners(emitter.getMaxListeners() + 1); emitter.once('event', () => { // do stuff emitter.setMaxListeners(Math.max(emitter.getMaxListeners() - 1, 0)); }); ``` The `--trace-warnings` command-line flag can be used to display the stack trace for such warnings. The emitted warning can be inspected with `process.on('warning')` and will have the additional `emitter`, `type`, and `count` properties, referring to the event emitter instance, the event's name and the number of attached listeners, respectively. Its `name` property is set to `'MaxListenersExceededWarning'`. #### Since v0.11.2",
     "optional": false,
     "defaultValue": "",
     "children": []
   },
   {
     "name": "errorMonitor",
-    "type": "typeof [`errorMonitor`](admin_discounts.internal.PassThrough.mdx#errormonitor)",
-    "description": "This symbol shall be used to install a listener for only monitoring `'error'`events. Listeners installed using this symbol are called before the regular`'error'` listeners are called. Installing a listener using this symbol does not change the behavior once an`'error'` event is emitted. Therefore, the process will still crash if no regular `'error'` listener is installed.",
+    "type": "typeof [`errorMonitor`](admin_discounts.internal.Socket.mdx#errormonitor)",
+    "description": "This symbol shall be used to install a listener for only monitoring `'error'`events. Listeners installed using this symbol are called before the regular`'error'` listeners are called. Installing a listener using this symbol does not change the behavior once an`'error'` event is emitted. Therefore, the process will still crash if no regular `'error'` listener is installed. #### Since v13.6.0, v12.17.0",
     "optional": false,
     "defaultValue": "",
     "children": []
@@ -1131,7 +1131,7 @@ ___
 ▸ **cork**(): `void`
 
 The `writable.cork()` method forces all written data to be buffered in memory.
-The buffered data will be flushed when either the [uncork](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx#uncork) or [end](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx#end) methods are called.
+The buffered data will be flushed when either the [uncork](admin_discounts.internal.WritableBase.mdx#uncork) or [end](admin_discounts.internal.WritableBase.mdx#end) methods are called.
 
 The primary intent of `writable.cork()` is to accommodate a situation in which
 several small chunks are written to the stream in rapid succession. Instead of
@@ -1720,7 +1720,7 @@ to the `Writable`. The optional `chunk` and `encoding` arguments allow one
 final additional chunk of data to be written immediately before closing the
 stream.
 
-Calling the [write](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx#write) method after calling [end](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx#end) will raise an error.
+Calling the [write](admin_discounts.internal.WritableBase.mdx#write) method after calling [end](admin_discounts.internal.WritableBase.mdx#end) will raise an error.
 
 ```js
 // Write 'hello, ' and then end with 'world!'.
@@ -4567,7 +4567,7 @@ a call to `readable.read(size)`, regardless of the value of the`size` argument.
 If the `readable.read()` method returns a chunk of data, a `'data'` event will
 also be emitted.
 
-Calling [read](admin_discounts.internal.PassThrough.mdx#read) after the `'end'` event has
+Calling [read](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#read) after the `'end'` event has
 been emitted will return `null`. No runtime error will be raised.
 
 #### Parameters
@@ -5455,7 +5455,7 @@ ___
 
 ▸ **uncork**(): `void`
 
-The `writable.uncork()` method flushes all data buffered since [cork](../../internal-2/classes/admin_discounts.internal.internal-2.Writable.mdx#cork) was called.
+The `writable.uncork()` method flushes all data buffered since [cork](admin_discounts.internal.WritableBase.mdx#cork) was called.
 
 When using `writable.cork()` and `writable.uncork()` to manage the buffering
 of writes to a stream, defer calls to `writable.uncork()` using`process.nextTick()`. Doing so allows batching of all`writable.write()` calls that occur within a given Node.js event
@@ -5516,7 +5516,7 @@ ___
 ▸ **unpipe**(`destination?`): [`PassThrough`](admin_discounts.internal.PassThrough.mdx)
 
 The `readable.unpipe()` method detaches a `Writable` stream previously attached
-using the [pipe](admin_discounts.internal.PassThrough.mdx#pipe) method.
+using the [pipe](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#pipe) method.
 
 If the `destination` is not specified, then _all_ pipes are detached.
 
@@ -5632,11 +5632,11 @@ function parseHeader(stream, callback) {
 }
 ```
 
-Unlike [push](admin_discounts.internal.PassThrough.mdx#push), `stream.unshift(chunk)` will not
+Unlike [push](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#push), `stream.unshift(chunk)` will not
 end the reading process by resetting the internal reading state of the stream.
 This can cause unexpected results if `readable.unshift()` is called during a
-read (i.e. from within a [_read](admin_discounts.internal.PassThrough.mdx#_read) implementation on a
-custom stream). Following the call to `readable.unshift()` with an immediate [push](admin_discounts.internal.PassThrough.mdx#push) will reset the reading state appropriately,
+read (i.e. from within a [_read](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#_read) implementation on a
+custom stream). Following the call to `readable.unshift()` with an immediate [push](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#push) will reset the reading state appropriately,
 however it is best to simply avoid calling `readable.unshift()` while in the
 process of performing a read.
 
@@ -5693,7 +5693,7 @@ ___
 Prior to Node.js 0.10, streams did not implement the entire `node:stream`module API as it is currently defined. (See `Compatibility` for more
 information.)
 
-When using an older Node.js library that emits `'data'` events and has a [pause](admin_discounts.internal.PassThrough.mdx#pause) method that is advisory only, the`readable.wrap()` method can be used to create a `Readable`
+When using an older Node.js library that emits `'data'` events and has a [pause](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#pause) method that is advisory only, the`readable.wrap()` method can be used to create a `Readable`
 stream that uses
 the old stream as its data source.
 
@@ -5783,7 +5783,7 @@ by default until they are piped or a `'data'` or `'readable'` event handler
 is added.
 
 If the data to be written can be generated or fetched on demand, it is
-recommended to encapsulate the logic into a `Readable` and use [pipe](admin_discounts.internal.PassThrough.mdx#pipe). However, if calling `write()` is preferred, it is
+recommended to encapsulate the logic into a `Readable` and use [pipe](../interfaces/admin_discounts.internal.internal.MedusaRequest.mdx#pipe). However, if calling `write()` is preferred, it is
 possible to respect backpressure and avoid memory issues using the `'drain'` event:
 
 ```js
@@ -5926,7 +5926,7 @@ A utility method for creating duplex streams.
 <ParameterTypes parameters={[
   {
     "name": "src",
-    "type": "`string` \\| [`Object`](../../admin_discounts/modules/admin_discounts.internal.mdx#object) \\| `Promise`<`any`\\> \\| `ArrayBuffer` \\| [`Stream`](admin_discounts.internal.Stream.mdx) \\| [`Blob`](admin_discounts.internal.Blob.mdx) \\| [`Iterable`](../interfaces/admin_discounts.internal.Iterable.mdx)<`any`\\> \\| [`AsyncIterable`](../interfaces/admin_discounts.internal.AsyncIterable.mdx)<`any`\\> \\| [`AsyncGeneratorFunction`](../interfaces/admin_discounts.internal.AsyncGeneratorFunction.mdx)",
+    "type": "`string` \\| [`Object`](../../admin_discounts/modules/admin_discounts.internal.mdx#object) \\| `Promise`<`any`\\> \\| [`Stream`](admin_discounts.internal.Stream.mdx) \\| `ArrayBuffer` \\| [`Blob`](admin_discounts.internal.Blob.mdx) \\| [`Iterable`](../interfaces/admin_discounts.internal.Iterable.mdx)<`any`\\> \\| [`AsyncIterable`](../interfaces/admin_discounts.internal.AsyncIterable.mdx)<`any`\\> \\| [`AsyncGeneratorFunction`](../interfaces/admin_discounts.internal.AsyncGeneratorFunction.mdx)",
     "description": "",
     "optional": false,
     "defaultValue": "",
