--- a/www/apps/docs/content/references/js-client/line_items/classes/line_items.LineItemsResource.mdx
+++ b/www/apps/docs/content/references/js-client/line_items/classes/line_items.LineItemsResource.mdx
@@ -60,7 +60,7 @@ Creates a line-item for a cart
       {
         "name": "StoreCartsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Cart details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -121,7 +121,7 @@ Remove a line-item from a cart
       {
         "name": "StoreCartsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Cart details.",
         "optional": false,
         "defaultValue": "",
         "children": []
@@ -191,7 +191,7 @@ Only quantity updates are allowed
       {
         "name": "StoreCartsRes",
         "type": "`object`",
-        "description": "",
+        "description": "#### Schema Cart details.",
         "optional": false,
         "defaultValue": "",
         "children": []
