--- a/www/apps/docs/content/references/js-client/product_tags/classes/product_tags.ProductTagsResource.mdx
+++ b/www/apps/docs/content/references/js-client/product_tags/classes/product_tags.ProductTagsResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreProductTagsListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_tags`: [`ProductTag`](../../internal/classes/admin_collections.internal.ProductTag.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product tags details.",
         "optional": false,
         "defaultValue": "",
         "children": []
