--- a/www/apps/docs/content/references/js-client/product_types/classes/product_types.ProductTypesResource.mdx
+++ b/www/apps/docs/content/references/js-client/product_types/classes/product_types.ProductTypesResource.mdx
@@ -50,7 +50,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
       {
         "name": "StoreProductTypesListRes",
         "type": "[`PaginatedResponse`](../../admin_batch_jobs/modules/admin_batch_jobs.internal.mdx#paginatedresponse) & { `product_types`: [`ProductType`](../../internal/classes/admin_collections.internal.ProductType.mdx)[]  }",
-        "description": "",
+        "description": "#### Schema An array of product types details.",
         "optional": false,
         "defaultValue": "",
         "children": []
